--- a/Views/Account/Register.cshtml
+++ b/Views/Account/Register.cshtml
@@ -13,6 +13,8 @@
                     </div>
                     <div class="card-body">
                         <form asp-action="Register">
+                         <div asp-validation-summary="ModelOnly" class="text-danger"></div>            
+
                             <div class="form-group">
                                 <label asp-for="UserName" class="control-label"></label>
                                 <input asp-for="UserName" class="form-control" placeholder="User Name" />
