--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -2,3 +2,4 @@
 @using AuthenticationAndAuthorization.Models
 @using AuthenticationAndAuthorization.Models.DTOs
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper AuthenticationAndAuthorization.TagHelpers.*, AuthenticationAndAuthorization
